// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`time > mode in 1`] = `
"import type { TheTime, SerializedTheTime } from "@duplojs/utils/date";

export type Time = SerializedTheTime | number | TheTime;"
`;

exports[`time > mode in 2`] = `
"import type { TheTime, SerializedTheTime } from "@duplojs/utils/date";

export type TimeIdentifier = SerializedTheTime | number | TheTime;"
`;

exports[`time > mode out 1`] = `
"import type { TheTime } from "@duplojs/utils/date";

export type Time = TheTime;"
`;

exports[`time > mode out 2`] = `
"import type { TheTime } from "@duplojs/utils/date";

export type TimeIdentifier = TheTime;"
`;

exports[`time > with preset importType 1`] = `
"import type { TheTime, SerializedTheTime } from "@duplojs/utils/date";

export type Time = SerializedTheTime | number | TheTime;"
`;
